--- a/src/app/Dbz/mainpage/mainpage.component.html
+++ b/src/app/Dbz/mainpage/mainpage.component.html
@@ -2,24 +2,13 @@
 <hr>
 <div class="row">
     <div class="col">
-        <h3>Personajes</h3>
-        <hr>
-        <ul>
-            <li>Krilin - 700</li>
-            <li>Goku - 15,00</li>
-            <li>Vegeta - 8,500</li>
-        </ul>
+        <!-- TODO: SE ESTA EMITIENDO EL VALOR DE LA LISTA DE OBJETOS PERSONAJES A LA CALSE ESPECIFICADA -->
+        <!-- [data]="personajes" -->
+        <app-personajes ></app-personajes>
     </div>
-
     <div class="col">
-        <h3>Agregar</h3>
-        <hr>
-        <form (submit)="agregar( $event )">
-            <input placeholder="Nombre" type="text">
-            <input placeholder="Poder" type="number">
-            <button type="submit">
-                Agregar
-            </button>
-        </form>
+        <!-- TODO: SE ESTA ESCUCHANDO EL VALOR EMITIDO POR LA CLASE HIJA -->
+        <!-- (nuevoPersonaje)="agregarNuevoPersonaje($event)" -->
+        <app-agregar ></app-agregar>
     </div>
 </div>
