--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<!-- <app-contador></app-contador>
-<app-heroe></app-heroe>
-<app-listado></app-listado> -->
-<app-mainpage></app-mainpage>
+<div class="d-flex">
+
+  <!--! Side bar -->
+  <app-sidebar></app-sidebar>
+  <!--! Fin de side bar -->
+  <app-gifs-page></app-gifs-page>
+
+
+</div>
