Tercera subida en desarrollo

--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,1 +1,5 @@
-<p>resultados works!</p>
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum iure facilis
+  sint harum ipsam minus at tenetur exercitationem maiores temporibus, nulla
+  corporis perferendis modi doloribus fugiat repudiandae dolor eius labore!
+</p>
