--- a/src/app/gifs/busqueda/busqueda.component.html
+++ b/src/app/gifs/busqueda/busqueda.component.html
@@ -1,1 +1,8 @@
-<p>busqueda works!</p>
+<h5>Buscar:</h5>
+<input
+  type="text"
+  class="form-control"
+  placeholder="Buscar gifs...."
+  #txtBuscar
+  (keyup.enter)="buscar()"
+/>
