--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,5 +1,12 @@
-<p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum iure facilis
-  sint harum ipsam minus at tenetur exercitationem maiores temporibus, nulla
-  corporis perferendis modi doloribus fugiat repudiandae dolor eius labore!
-</p>
+<div class="row">
+  <div *ngFor="let item of resultados" class="col-md-4 col-sm-6">
+    <div class="card">
+      <img [src]="item.images.downsized_medium.url" alt="" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">
+           {{ item.title | titlecase }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
