--- a/src/app/share/sidebar/sidebar.component.html
+++ b/src/app/share/sidebar/sidebar.component.html
@@ -2,8 +2,9 @@
   <h3 class="text-light">Gifs-APP</h3>
   <hr class="text-white">
   <div class="list-group list-reset">
-    <a href="#" class="list-group-item list-group-item-action">
-      Dashbordp
+    <a href="#" class="list-group-item list-group-item-action my-1" *ngFor="let h of historial">
+      {{ h | titlecase }}
     </a>
+    
   </div>
-</div>
+</div> 
