--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div *ngFor="let item of resultados" class="col-md-4 col-sm-6">
-    <div class="card">
+    <div class="card animate__animated animate__fadeIn animate__faster">
       <img [src]="item.images.downsized_medium.url" alt="" class="card-img-top">
       <div class="card-body">
         <p class="card-text">
-           {{ item.title | titlecase }}
+           {{ item.title| titlecase }}
         </p>
       </div>
     </div>
