--- a/src/app/share/sidebar/sidebar.component.html
+++ b/src/app/share/sidebar/sidebar.component.html
@@ -1,10 +1,15 @@
 <div class="bg-dark border-right p-3" id="sidebar">
   <h3 class="text-light">Gifs-APP</h3>
-  <hr class="text-white">
+  <hr class="text-white" />
   <div class="list-group list-reset">
-    <a href="#" class="list-group-item list-group-item-action my-1" *ngFor="let h of historial">
+    <a
+      href="#"
+      #nombre
+      (click)="buscar(h)"
+      class="list-group-item list-group-item-action my-1"
+      *ngFor="let h of historial"
+    >
       {{ h | titlecase }}
     </a>
-    
   </div>
-</div> 
+</div>
