--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div class="d-flex">
-  <!--! Side bar -->
-  <app-sidebar></app-sidebar>
-  <!--! Fin de side bar -->
-  <app-gifs-page></app-gifs-page>
+<div class="row container mt-4">
+  <div class="col-3">
+    <app-sidebar></app-sidebar>
+  </div>
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
 </div>
