--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,16 @@
-<p>por-capital works!</p>
+<div class="row">
+    <div class="col">
+      <app-pais-input 
+        (onEnter)="buscar($event)"
+        placeholder ="Buscar Capital..." >
+      </app-pais-input>
+    </div>
+  </div>
+  <hr />
+  <div *ngIf="error" class="alert alert-danger">No se encontro nada con el nombre {{termino}}</div>
+  <div class="row">
+    <div class="col">
+      <app-pais-tabla [paises]="capitales" ></app-pais-tabla>
+    </div>
+  </div>
+  
