--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,43 @@
-<p>ver-pais works!</p>
+<div *ngIf="!pais; else divpais" class="alert alert-info">
+  Espera por Favor...
+</div>
+
+<ng-template #divpais>
+  <div class="row">
+    <div class="col-12">
+      <h1>
+        Pais: <small>{{ pais.name.common }}</small>
+      </h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-4">
+      <h3>Bandera</h3>
+      <img class="img-thumbnail" [src]="pais.flags.svg" alt="" />
+    </div>
+    <div class="col">
+      <h3>Informacion</h3>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <strong>Poblacion</strong> {{ pais.population }}
+        </li>
+        <li class="list-group-item">
+          <strong>Codigo Numerico</strong> {{ pais.ccn3 }}
+        </li>
+        <li class="list-group-item">
+          <strong>Codigo Alpha3</strong> {{ pais.cca3 }}
+        </li>
+      </ul>
+    </div>
+    <h3>Traducciones</h3>
+    <div class="row">
+        <div class="col">
+            <span *ngFor="let t of pais.translations | keyvalue" class="badge bg-primary me-1">{{t.value.official}}</span>
+        </div>
+    </div>
+  </div>
+
+  <pre class="mt-5">
+    {{pais  | json}}
+  </pre>
+</ng-template>
