--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,10 +1,27 @@
-<h3>Buscar por region <small>{{regionActiva | titlecase}}</small></h3>
+<h3>
+  Buscar por region <small>{{ regionActiva | titlecase }}</small>
+</h3>
 
 <h5>Seleccione la region</h5>
 <div class="row">
-    <div class="col">
-        <button *ngFor="let region of regiones" class="btn btn-outline-primary" (click)="activarRegion(region)">
-            {{ region}}
-        </button>
-    </div>
+  <div class="col">
+    <!-- [class.btn-primary] ="region === regionActiva" -->
+    <!-- [ngClass]="{
+            'btn-primary': region === regionActiva,
+            'btn-outline-primary': regionActiva !=== region
+        }" -->
+
+    <button
+      *ngFor="let region of regiones"
+      [class]="
+        region == regionActiva ? 'btn btn-primary' : 'btn btn-outline-primary'"
+      (click)="activarRegion(region)">
+      {{ region | titlecase }}
+    </button>
+  </div>
 </div>
+<!-- <div class="row">
+  <div class="col">
+    <app-pais-tabla [paises]="paises"></app-pais-tabla>
+  </div>
+</div> -->
