--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -15,7 +15,7 @@
           <td><img style="width: 50px;" [src]="p.flags.png" alt=""></td>
           <td>{{p.name.official}}</td>
           <td>{{p.population | number}}</td>
-          <td><a [routerLink]="['/pais',p.cca2]" routerLinkActive="router-link-active" >click aqui</a></td>
+          <td><a [routerLink]="['/pais',p.cca2 || p.alpha2Code ]" routerLinkActive="router-link-active" >info...</a></td>
       </tr>
     </tbody>
   </table>
