--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -20,8 +20,8 @@
     </button>
   </div>
 </div>
-<!-- <div class="row">
+<div class="row">
   <div class="col">
     <app-pais-tabla [paises]="paises"></app-pais-tabla>
   </div>
-</div> -->
+</div>
