--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<div class="row container mt-4">
-  <div class="col-3">
-    <app-sidebar></app-sidebar>
-  </div>
-  <div class="col">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<app-menu></app-menu>
+
+<router-outlet></router-outlet>
+
+<!-- <h1 class="text-layout">Hello</h1>\
+
+<p-card [header]="name |titlecase" subheader="Esto es subheader" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+      quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+  <ng-template pTemplate="footer">
+    <button pButton label="click" icon="pi pi-refresh" iconPos="right"></button>
+  </ng-template>
+  
+</p-card> -->
