quinta subida en desarrollo

--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,12 @@
-<p>no-comunes works!</p>
+<div class="text-layout">
+  <h1>Pipes no tan comunes</h1>
+  <p>Pipes incluidos en Angular</p>
+</div>
+
+<div class="grid">
+  <div style="color: white ;" class="col p-md-6 p-sm-9">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto
+    asperiores consequuntur non modi architecto enim labore harum voluptate hic.
+    Temporibus rerum odit, velit beatae tempora veniam ratione quisquam aperiam!
+  </div>
+</div>
