--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 html, body {
     margin: 10px;
     font-family: var(--font-family) ;
-    background-color: var( --surface-a );
+    background-color: var( --surface-b );
 }
 .text-layout{
     color: var(--text-color);
