sexta subida en desarrollo

--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,6 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+    <h1>Pipes personalizados</h1>
+    <p>Pipes creados por {{'mi' | mayusculas:enMayusculas}}</p>
+    <button (click)="cambiar()" pButton pRipple type="button" label="Help" class="p-button-help"></button>
+  </div>
+  
